<resources>
    <string name="app_name">IntentsProj</string>
    <string name="number1">Number 1</string>
    <string name="number2">Number 2</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiflication">*</string>
    <string name="devide">/</string>
    <string name="hint1">123</string>
    <string name="hint2">123</string>
    <string name="btn_ok">OK</string>
    <string name="answer">Answer</string>
    <string name="helloWorld">Hello World</string>
    <string name="toastMessage">To</string>
    <string name="custom_toast">Custom Toast</string>
    <string name="btn_to_calculator">To Calculator</string>
</resources>
